[gd_scene load_steps=2 format=3 uid="uid://most7j8bx8hc"]

[ext_resource type="Script" path="res://scripts/game_buttons.gd" id="1_g2qpf"]

[node name="GameButtons" type="VBoxContainer"]
custom_minimum_size = Vector2(512, 0)
size_flags_horizontal = 4
size_flags_vertical = 8
script = ExtResource("1_g2qpf")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 68)
layout_mode = 2
theme_override_constants/separation = 10

[node name="RestartButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Restart"

[node name="SettingsButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Settings"

[node name="MainMenuButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Main Menu"
